update index page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Phi Thạch</title>
+    <title>Phi Thạch | Bảng điểm Karatedo</title>
+    <meta name="description" content="Phi Thạch | Bảng điểm Karatedo" />
+    <meta name="keywords" content="Karatedo" />
+    <meta name="author" content="Phi Thạch" />
+    <meta property="og:title" content="Phi Thạch | Bảng điểm Karatedo" />
+    <meta property="og:description" content="Phi Thạch | Bảng điểm Karatedo" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
   <body>
     <p>Chọn loại bảng điểm</p>
