--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
   <body>
     <p>Chọn loại bảng điểm</p>
     <a href="./Kata Scoreboard.html"><p>Kata</p></a>
-    <a href="./Kata Scoreboard.html"><p>Kumite</p></a>
+    <a href="./Kumite 1min30.html"><p>Kumite</p></a>
   </body>
 </html>
